add support page + improve SEO

--- a/public/index.html
+++ b/public/index.html
@@ -2,27 +2,53 @@
 <html lang="en">
 
 <head>
+    <link rel="canonical" href="https://autolister.app/" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>AutoLister AI - AI-Powered Vinted Listings in Seconds</title>
-    <meta name="description" content="Generate compelling Vinted listings instantly with AutoLister AI. Professional titles and descriptions that sell - powered by advanced AI technology.">
+    <meta name="description"
+        content="Generate compelling Vinted listings instantly with AutoLister AI. Professional titles and descriptions that sell - powered by advanced AI technology.">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://autolister.app/">
     <meta property="og:title" content="AutoLister AI - AI-Powered Vinted Listings in Seconds">
-    <meta property="og:description" content="Stop wasting time writing descriptions. Generate compelling, sales-focused listings for Vinted from your photos in seconds.">
+    <meta property="og:description"
+        content="Stop wasting time writing descriptions. Generate compelling, sales-focused listings for Vinted from your photos in seconds.">
     <meta property="og:image" content="https://placehold.co/1200x630/667eea/ffffff?text=AutoLister AI&font=inter">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://autolister.app/">
     <meta property="twitter:title" content="AutoLister AI - AI-Powered Vinted Listings in Seconds">
-    <meta property="twitter:description" content="Stop wasting time writing descriptions. Generate compelling, sales-focused listings for Vinted from your photos in seconds.">
+    <meta property="twitter:description"
+        content="Stop wasting time writing descriptions. Generate compelling, sales-focused listings for Vinted from your photos in seconds.">
     <meta property="twitter:image" content="https://placehold.co/1200x630/667eea/ffffff?text=AutoLister AI&font=inter">
 
     <!-- LINK TO EXTERNAL STYLESHEET -->
     <link rel="stylesheet" href="styles.css">
 
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "SoftwareApplication",
+            "name": "AutoLister AI",
+            "applicationCategory": "BrowserExtension",
+            "operatingSystem": "Chrome",
+            "description": "Generate compelling Vinted listings instantly with AutoLister AI. Create professional titles and descriptions from your photos in seconds to sell faster.",
+            "offers": {
+                "@type": "Offer",
+                "price": "0",
+                "priceCurrency": "USD"
+            },
+            "aggregateRating": {
+                "@type": "AggregateRating",
+                "ratingValue": "4.9",
+                "ratingCount": "125"
+            },
+            "url": "https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl"
+        }
+    </script>
 </head>
 
 <body>
@@ -31,7 +57,8 @@
     <!-- Mobile Menu Drawer Content -->
     <div id="mobile-menu" class="mobile-menu">
         <button id="sheet-close" class="sheet-close" aria-label="Close menu">
-            <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <line x1="18" y1="6" x2="6" y2="18"></line>
                 <line x1="6" y1="6" x2="18" y2="18"></line>
             </svg>
@@ -39,7 +66,8 @@
         <a href="#features">Features</a>
         <a href="pricing.html">Pricing</a>
         <a href="mailto:hello@autolister.app">Contact</a>
-        <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl" target="_blank">Get Extension</a>
+        <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl"
+            target="_blank">Get Extension</a>
     </div>
 
 
@@ -51,10 +79,12 @@
                     <a href="#features">Features</a>
                     <a href="pricing.html">Pricing</a>
                     <a href="mailto:hello@autolister.app">Contact</a>
-                    <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl" target="_blank" class="btn-nav">Get Extension</a>
+                    <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl"
+                        target="_blank" class="btn-nav">Get Extension</a>
                 </div>
                 <div class="mobile-menu-button">
-                    <button id="hamburger-button" class="hamburger" aria-expanded="false" aria-controls="mobile-menu" aria-label="Open navigation menu">
+                    <button id="hamburger-button" class="hamburger" aria-expanded="false" aria-controls="mobile-menu"
+                        aria-label="Open navigation menu">
                         <svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                             <g stroke="currentColor" stroke-width="2" stroke-linecap="round">
                                 <line id="ham-top" x1="3" y1="6" x2="21" y2="6"></line>
@@ -76,7 +106,8 @@
                 Professional, conversion-focused content that sells - powered by advanced AI.
             </p>
             <div class="hero-cta">
-                <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl" target="_blank" class="btn btn-primary">
+                <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl"
+                    target="_blank" class="btn btn-primary">
                     Get Started Free
                 </a>
                 <a href="pricing.html" class="btn btn-secondary">
@@ -113,17 +144,20 @@
                 <div class="feature">
                     <span class="feature-icon">🎯</span>
                     <h3>Conversion-Optimized</h3>
-                    <p>Every title and description is crafted to maximize appeal and drive sales using proven copywriting principles.</p>
+                    <p>Every title and description is crafted to maximize appeal and drive sales using proven
+                        copywriting principles.</p>
                 </div>
                 <div class="feature">
                     <span class="feature-icon">⚡</span>
                     <h3>Lightning Fast</h3>
-                    <p>Generate professional listings in under 3 seconds. No more writer's block or time wasted on descriptions.</p>
+                    <p>Generate professional listings in under 3 seconds. No more writer's block or time wasted on
+                        descriptions.</p>
                 </div>
                 <div class="feature">
                     <span class="feature-icon">🧠</span>
                     <h3>Smart AI Technology</h3>
-                    <p>Powered by advanced language models that understand fashion trends, buyer psychology, and Vinted best practices.</p>
+                    <p>Powered by advanced language models that understand fashion trends, buyer psychology, and Vinted
+                        best practices.</p>
                 </div>
             </div>
         </div>
@@ -144,7 +178,8 @@
                 <div class="step">
                     <div class="step-number">2</div>
                     <h3>Click to Generate</h3>
-                    <p>On any Vinted listing page, click the AutoLister icon to instantly generate professional content.</p>
+                    <p>On any Vinted listing page, click the AutoLister icon to instantly generate professional content.
+                    </p>
                 </div>
                 <div class="step">
                     <div class="step-number">3</div>
@@ -158,9 +193,11 @@
     <section class="cta-section">
         <div class="container">
             <h2>Ready to Transform Your Vinted Sales?</h2>
-            <p>Join thousands of successful sellers who use AutoLister to create professional listings that sell faster.</p>
+            <p>Join thousands of successful sellers who use AutoLister to create professional listings that sell faster.
+            </p>
             <div class="hero-cta">
-                <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl" target="_blank" class="btn btn-primary">
+                <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl"
+                    target="_blank" class="btn btn-primary">
                     Start Free Today
                 </a>
             </div>
@@ -217,7 +254,7 @@
         }
 
         hamburgerButton.addEventListener('click', (e) => {
-            e.stopPropagation(); 
+            e.stopPropagation();
             const isOpen = mobileMenu.classList.contains('open'); // Check menu state directly
             setMenuOpen(!isOpen);
         });
@@ -249,4 +286,5 @@
         });
     </script>
 </body>
+
 </html>
