add sitemap and robots

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>AutoLister AI - AI-Powered Vinted Listings in Seconds</title>
+    <title>AutoLister AI: AI-Powered Vinted Description Generator - Try For Free</title>
     <meta name="description"
         content="Generate compelling Vinted listings instantly with AutoLister AI. Professional titles and descriptions that sell - powered by advanced AI technology.">
 
@@ -137,7 +137,7 @@
     <section id="features" class="features">
         <div class="container">
             <div class="section-header">
-                <h2>Why Choose AutoLister AI?</h2>
+                <h2>A Faster Way to Sell on Vinted</h2>
                 <p>Our advanced AI technology creates listings that stand out and sell faster</p>
             </div>
             <div class="features-grid">
@@ -173,12 +173,12 @@
                 <div class="step">
                     <div class="step-number">1</div>
                     <h3>Install Extension</h3>
-                    <p>Add AutoLister to your Chrome browser in seconds. It's free to get started.</p>
+                    <p>Add the Vinted generator to your browser in seconds. It's free to get started.</p>
                 </div>
                 <div class="step">
                     <div class="step-number">2</div>
                     <h3>Click to Generate</h3>
-                    <p>On any Vinted listing page, click the AutoLister icon to instantly generate professional content.
+                    <p>On any Vinted listing page, click the Generate button to instantly generate professional content.
                     </p>
                 </div>
                 <div class="step">
