add ga4 tracking

--- a/public/support.html
+++ b/public/support.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2QL50WB6M"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-F2QL50WB6M');
+    </script>
+
     <title>Support & FAQ - AutoLister AI</title>
     <meta name="description"
         content="Find answers to common questions and get support for AutoLister AI. Learn how to install, use, and troubleshoot the Vinted listing generator.">
