--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,18 @@
 
 <head>
     <link rel="canonical" href="https://autolister.app/" />
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2QL50WB6M"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-F2QL50WB6M');
+    </script>
 
     <title>AutoLister AI: AI-Powered Vinted Description Generator - Try For Free</title>
     <meta name="description"
