add screenshot to hero section

--- a/public/index.html
+++ b/public/index.html
@@ -109,36 +109,42 @@
 
     <section class="hero">
         <div class="container">
-            <h1>Transform Your Vinted Sales<br>with AI-Powered Listings</h1>
-            <p class="subtitle">
-                Generate compelling titles and descriptions for your Vinted items in seconds.
-                Professional, conversion-focused content that sells - powered by advanced AI.
-            </p>
-            <div class="hero-cta">
-                <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl"
-                    target="_blank" class="btn btn-primary">
-                    Get Started Free
-                </a>
-                <a href="pricing.html" class="btn btn-secondary">
-                    View Plans & Pricing
-                </a>
-            </div>
-            <div class="social-proof">
-                <p>Join thousands of successful Vinted sellers</p>
-                <div class="stats">
-                    <div class="stat">
-                        <span class="stat-number">50K+</span>
-                        <span class="stat-label">Listings Generated</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-number">98%</span>
-                        <span class="stat-label">User Satisfaction</span>
-                    </div>
-                    <div class="stat">
-                        <span class="stat-number">3 sec</span>
-                        <span class="stat-label">Average Generation Time</span>
+            <div class="hero-content">
+                <h1>Transform Your Vinted Sales<br>with AI-Powered Listings</h1>
+                <p class="subtitle">
+                    Generate compelling titles and descriptions for your Vinted items in seconds.
+                    Professional, conversion-focused content that sells - powered by advanced AI.
+                </p>
+                <div class="hero-cta">
+                    <a href="https://chromewebstore.google.com/detail/autolister-ai/mommklhpammnlojjobejddmidmdcalcl"
+                        target="_blank" class="btn btn-primary">
+                        Get Started Free
+                    </a>
+                    <a href="pricing.html" class="btn btn-secondary">
+                        View Plans & Pricing
+                    </a>
+                </div>
+                <div class="social-proof">
+                    <p>Join thousands of successful Vinted sellers</p>
+                    <div class="stats">
+                        <div class="stat">
+                            <span class="stat-number">10K+</span>
+                            <span class="stat-label">Listings Generated</span>
+                        </div>
+                        <div class="stat">
+                            <span class="stat-number">14+</span>
+                            <span class="stat-label">Languages supported</span>
+                        </div>
+                        <div class="stat">
+                            <span class="stat-number">~3 sec</span>
+                            <span class="stat-label">Average Generation Time</span>
+                        </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="hero-image-container">
+                <img src="screenshot-1.png" alt="Screenshot of AutoLister AI generating a Vinted listing in one click">
             </div>
         </div>
     </section>
