--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/auto-lister-ai-svg-logo.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="/auto-lister-ai-svg-logo.svg">
+    <link rel="apple-touch-icon" href="/auto-lister-ai-svg-logo.svg">
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2QL50WB6M"></script>
     <script>
@@ -36,6 +41,16 @@
 
     <!-- LINK TO EXTERNAL STYLESHEET -->
     <link rel="stylesheet" href="styles.css">
+
+    <script type="application/ld+json">
+        {
+            "@context" : "https://schema.org",
+            "@type" : "WebSite",
+            "name" : "AutoLister AI",
+            "alternateName": "AutoLister",
+            "url" : "https://autolister.app/"
+        }
+    </script>
 
     <script type="application/ld+json">
         {
