--- a/public/pricing.html
+++ b/public/pricing.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/auto-lister-ai-svg-logo.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="/auto-lister-ai-svg-logo.svg">
+    <link rel="apple-touch-icon" href="/auto-lister-ai-svg-logo.svg">
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2QL50WB6M"></script>
     <script>
