--- a/public/admin.html
+++ b/public/admin.html
@@ -62,11 +62,23 @@
             font-family: var(--font-sans);
             background-color: var(--bg-body);
             color: var(--text-main);
-            height: 100vh;
-            overflow: hidden;
+            min-height: 100vh;
+            height: auto;
+            overflow-x: hidden;
+            overflow-y: hidden;
             display: flex;
             font-size: 14px;
             line-height: 1.5;
+        }
+
+        @media (max-width: 768px) {
+            body {
+                overflow-y: auto;
+            }
+        }
+
+        body.menu-locked {
+            overflow: hidden;
         }
 
         /* Auth Screen */
@@ -200,7 +212,10 @@
 
         @media (max-width: 768px) {
             .sidebar {
-                transform: translateX(-100%);
+                width: 82vw;
+                max-width: 320px;
+                box-shadow: 0 18px 50px rgba(0, 0, 0, 0.18);
+                transform: translateX(-105%);
             }
 
             .sidebar.mobile-open {
@@ -262,19 +277,24 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
+            min-height: 100vh;
             overflow: hidden;
             background: var(--bg-body);
+            max-width: 100vw;
         }
 
         @media (max-width: 768px) {
             .main-content {
                 margin-left: 0;
+                height: auto;
+                min-height: 100vh;
+                overflow: visible;
             }
         }
 
         .top-bar {
-            height: var(--header-height);
-            background: rgba(255, 255, 255, 0.8);
+            min-height: var(--header-height);
+            background: rgba(255, 255, 255, 0.9);
             backdrop-filter: blur(12px);
             border-bottom: 1px solid var(--border-color);
             display: flex;
@@ -285,11 +305,14 @@
             position: sticky;
             top: 0;
             z-index: 40;
+            gap: 0.75rem;
         }
 
         @media (max-width: 768px) {
             .top-bar {
-                padding: 0 1rem;
+                padding: 0.75rem 1rem;
+                flex-wrap: wrap;
+                gap: 0.5rem;
             }
         }
 
@@ -333,30 +356,46 @@
             flex: 1;
             overflow-y: auto;
             padding: 2rem;
+            width: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        @media (max-width: 1024px) {
+            .content-scroll {
+                padding: 1.5rem;
+            }
         }
 
         @media (max-width: 768px) {
             .content-scroll {
-                padding: 1rem;
+                overflow-y: visible;
+                padding: 1rem 1rem 4.5rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .content-scroll {
+                padding: 0.85rem 0.85rem 4.5rem;
             }
         }
 
         /* Cards & Stats */
         .grid-stats {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
             gap: 1rem;
             margin-bottom: 2rem;
         }
 
         @media (max-width: 768px) {
             .grid-stats {
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(2, minmax(0, 1fr));
                 gap: 0.75rem;
             }
         }
 
-        @media (max-width: 480px) {
+        @media (max-width: 520px) {
             .grid-stats {
                 grid-template-columns: 1fr;
             }
@@ -463,13 +502,19 @@
             width: 100%;
             border-collapse: collapse;
             font-size: 0.875rem;
-            min-width: 800px;
+            min-width: 720px;
+        }
+
+        @media (max-width: 1024px) {
+            table {
+                min-width: 640px;
+            }
         }
 
         @media (max-width: 768px) {
             table {
                 font-size: 0.75rem;
-                min-width: 600px;
+                min-width: 560px;
             }
         }
 
@@ -562,6 +607,12 @@
             gap: 0.75rem;
             margin-bottom: 1.5rem;
             flex-wrap: wrap;
+        }
+
+        @media (max-width: 768px) {
+            .filters-bar {
+                flex-direction: column;
+            }
         }
 
         .filter-input {
@@ -896,6 +947,48 @@
             display: block;
             opacity: 1;
         }
+
+        .mobile-bottom-nav {
+            display: none;
+        }
+
+        @media (max-width: 768px) {
+            .mobile-bottom-nav {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                gap: 0.5rem;
+                padding: 0.75rem 1rem calc(0.75rem + env(safe-area-inset-bottom, 0px));
+                background: rgba(255, 255, 255, 0.95);
+                backdrop-filter: blur(12px);
+                border-top: 1px solid var(--border-color);
+                z-index: 44;
+            }
+        }
+
+        .mobile-bottom-btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            gap: 0.35rem;
+            padding: 0.55rem 0.5rem;
+            border-radius: var(--radius-md);
+            border: 1px solid var(--border-color);
+            background: #f9fafb;
+            color: var(--text-muted);
+            font-weight: 600;
+            font-size: 0.9rem;
+            transition: all 0.15s ease;
+        }
+
+        .mobile-bottom-btn.active {
+            background: #111827;
+            color: #ffffff;
+            border-color: #111827;
+        }
     </style>
 </head>
 
@@ -930,7 +1023,7 @@
     <!-- Dashboard Layout -->
     <div id="dashboardLayout" class="hidden" style="width: 100%;">
         <!-- Mobile Overlay -->
-        <div id="mobileOverlay" class="mobile-overlay" onclick="toggleMobileMenu()"></div>
+        <div id="mobileOverlay" class="mobile-overlay" onclick="toggleMobileMenu(false)"></div>
 
         <!-- Sidebar -->
         <aside class="sidebar" id="sidebar">
@@ -1016,6 +1109,12 @@
                 <!-- Views will be injected here -->
             </div>
         </main>
+
+        <nav class="mobile-bottom-nav" aria-label="Mobile navigation">
+            <button class="mobile-bottom-btn active" data-view="overview" onclick="switchView('overview')">Overview</button>
+            <button class="mobile-bottom-btn" data-view="logs" onclick="switchView('logs')">Logs</button>
+            <button class="mobile-bottom-btn" data-view="users" onclick="switchView('users')">Users</button>
+        </nav>
     </div>
 
     <!-- Toast Notification -->
@@ -1131,6 +1230,10 @@
                 if (el.textContent.toLowerCase().includes(viewName)) el.classList.add('active');
             });
 
+            document.querySelectorAll('.mobile-bottom-btn').forEach(btn => {
+                btn.classList.toggle('active', btn.dataset.view === viewName);
+            });
+
             // Update Title
             const titles = { overview: 'Overview', logs: 'API Logs', users: 'User Management' };
             document.getElementById('pageTitle').textContent = titles[viewName];
@@ -1142,17 +1245,16 @@
             const sidebar = document.getElementById('sidebar');
             const overlay = document.getElementById('mobileOverlay');
 
-            if (forceState !== undefined) {
-                if (forceState) {
-                    sidebar.classList.add('mobile-open');
-                    overlay.classList.add('active');
-                } else {
-                    sidebar.classList.remove('mobile-open');
-                    overlay.classList.remove('active');
-                }
+            const nextState = forceState !== undefined ? forceState : !sidebar.classList.contains('mobile-open');
+
+            if (nextState) {
+                sidebar.classList.add('mobile-open');
+                overlay.classList.add('active');
+                document.body.classList.add('menu-locked');
             } else {
-                sidebar.classList.toggle('mobile-open');
-                overlay.classList.toggle('active');
+                sidebar.classList.remove('mobile-open');
+                overlay.classList.remove('active');
+                document.body.classList.remove('menu-locked');
             }
         }
 
