update admin ui for mobile

--- a/public/admin.html
+++ b/public/admin.html
@@ -864,18 +864,18 @@
         }
 
         /* Mobile Card Layout for Tables */
+        .mobile-card-list {
+            display: none;
+        }
+
         @media (max-width: 768px) {
             .table-container table {
                 display: none;
             }
 
             .mobile-card-list {
-                display: block;
+                display: block !important;
             }
-        }
-
-        .mobile-card-list {
-            display: none;
         }
 
         .mobile-card {
