--- a/public/pricing.html
+++ b/public/pricing.html
@@ -274,7 +274,7 @@
         const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
         // API Base URL
-        const API_BASE = "https://quick-vint.vercel.app";
+        const API_BASE = "https://quick-vint-api.vercel.app";
 
         // Current user state
         let currentUser = null;
