update hero section with promo vid

--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,10 @@
             </div>
 
             <div class="hero-image-container">
-                <img src="screenshot-1.png" alt="Screenshot of AutoLister AI generating a Vinted listing in one click">
+                <video class="hero-video" src="vid-promo.mp4" poster="screenshot-1.png" autoplay muted loop playsinline controls
+                    aria-label="Promo video showing AutoLister AI generating a Vinted listing">
+                    Your browser does not support the video tag.
+                </video>
             </div>
         </div>
     </section>
