restrict disposable mails

--- a/public/terms.html
+++ b/public/terms.html
@@ -135,6 +135,9 @@
                 prohibited.</li>
             <li><strong>Legitimate Use Only:</strong> Service must be used for genuine Vinted listing creation, not spam
                 or abuse.</li>
+            <li><strong>Prohibited Email Providers:</strong> Disposable email addresses are not allowed. If you have
+                previously used or attempt to use one, you risk legal action. Contact us for appeal, or if you believe
+                this is a mistake.</li>
             <li><strong>No Resale:</strong> You may not resell, redistribute, or commercialize our AI-generated content
                 without permission.</li>
         </ul>
