update brand part in prompt

--- a/public/pricing.html
+++ b/public/pricing.html
@@ -273,8 +273,8 @@
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImpxbG9pb3Zkd2phb3JubmZ2bXl1Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0ODIwODMzMiwiZXhwIjoyMDYzNzg0MzMyfQ.Urz77RMqsJs8gJmA3yia_HhxaaeDrHURrF-fPeExRNQ';
         const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-        // API Base URL
-        const API_BASE = "https://quick-vint-api.vercel.app";
+        // API Base URL - Use current origin to avoid CORS issues
+        const API_BASE = window.location.origin;
 
         // Current user state
         let currentUser = null;
