--- a/public/pricing.html
+++ b/public/pricing.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/auto-lister-ai-svg-logo.svg" type="image/svg+xml">
-    <link rel="shortcut icon" href="/auto-lister-ai-svg-logo.svg">
-    <link rel="apple-touch-icon" href="/auto-lister-ai-svg-logo.svg">
+    <link rel="icon" href="/logo.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="/logo.svg">
+    <link rel="apple-touch-icon" href="/logo.svg">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2QL50WB6M"></script>
@@ -193,7 +193,7 @@
         <p><strong>Why so limited for free?</strong> Free trial gives you just enough to see the magic ✨. Most sellers
             need more than 2 listings/day, making paid plans excellent value.</p>
         <p><strong>No surprises:</strong> All prices in EUR. Cancel anytime. No setup fees.</p>
-        <p>&copy; 2025 AutoLister AI · All rights reserved · <a href="/privacy.html">Privacy Policy</a> · <a
+        <p>&copy; 2026 AutoLister AI · All rights reserved · <a href="/privacy.html">Privacy Policy</a> · <a
                 href="/terms.html">Terms of Service</a></p>
     </footer>
 
