--- a/public/privacy.html
+++ b/public/privacy.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/auto-lister-ai-svg-logo.svg" type="image/svg+xml">
-  <link rel="shortcut icon" href="/auto-lister-ai-svg-logo.svg">
-  <link rel="apple-touch-icon" href="/auto-lister-ai-svg-logo.svg">
+  <link rel="icon" href="/logo.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="/logo.svg">
+  <link rel="apple-touch-icon" href="/logo.svg">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2QL50WB6M"></script>
   <script>
@@ -295,7 +295,7 @@
       <strong>Address:</strong> AutoLister AI, 1234 Extension Lane, Amsterdam, Netherlands
     </address>
 
-    <footer>&copy; 2025 AutoLister AI · All rights reserved</footer>
+    <footer>&copy; 2026 AutoLister AI · All rights reserved</footer>
   </div>
 </body>
 
