--- a/public/terms.html
+++ b/public/terms.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/auto-lister-ai-svg-logo.svg" type="image/svg+xml">
-    <link rel="shortcut icon" href="/auto-lister-ai-svg-logo.svg">
-    <link rel="apple-touch-icon" href="/auto-lister-ai-svg-logo.svg">
+    <link rel="icon" href="/logo.svg" type="image/svg+xml">
+    <link rel="shortcut icon" href="/logo.svg">
+    <link rel="apple-touch-icon" href="/logo.svg">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-F2QL50WB6M"></script>
@@ -192,7 +192,7 @@
         <p>For legal matters, contact: <strong>legal@autolister.ai</strong></p>
         <p>For support matters, contact: <strong>support@autolister.ai</strong></p>
 
-        <footer>&copy; 2025 AutoLister AI · All rights reserved</footer>
+        <footer>&copy; 2026 AutoLister AI · All rights reserved</footer>
     </div>
 </body>
 
